# any2api

./: Dockerfile  README.md  config.defaults.toml  docker-compose.yml  pyproject.toml
app/: main.py
app/control/account/: runtime.py  scheduler.py
app/control/model/: registry.py
app/control/proxy/: __init__.py  models.py
app/dataplane/account/: __init__.py  feedback.py  selector.py  table.py
app/dataplane/proxy/: __init__.py  table.py
app/dataplane/shared/: enums.py
app/platform/auth/: key_registry.py  middleware.py
app/products/internal/: __init__.py  router.py
app/products/openai/: chat.py  images.py  router.py  video.py
app/products/web/: router.py
app/providers/: __init__.py  chatgpt2api.py  qwen_embed.py
app/statics/admin/: account.html  cache.html  chatgpt-account.html  config.html  dashboard.html  diagnostics.html  header.html  keys.html  login.html  qwen-account.html  test.html
app/statics/js/: admin-header.js  footer.js  i18n.js  webui-header.js
app/statics/webui/: header.html  image.html  login.html
docs/: README.en.md
embedded_qwen/backend/: accounts.json  main.py  requirements.txt
embedded_qwen/backend/adapter/: __init__.py  standard_request.py
embedded_qwen/backend/api/: admin.py  anthropic.py  embeddings.py  files_api.py  gemini.py  images.py  models.py  probes.py  v1_chat.py
embedded_qwen/backend/core/: __init__.py  account_pool.py  browser_engine.py  config.py  database.py  httpx_engine.py  hybrid_engine.py  log_filter.py  request_logging.py  (+4 more)
tests/: test_chatgpt2api_integration_unit.py  test_stream_usage_unit.py
(+61 files in other folders)
