[project]
name = "any2api"
version = "2.0.4.rc1"
description = "Any2API rebuilt with FastAPI, acting as the unified reverse-proxy control plane for web model providers such as Grok and Qwen."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.4",
    "aiohttp-socks>=0.11.0",
    "aiomysql>=0.2.0",
    "asyncpg>=0.31.0",
    "camoufox",
    "certifi>=2025.10.5",
    "cryptography>=46.0.7",
    "curl-cffi>=0.15.0",
    "fastapi>=0.119.0",
    "granian>=2.7.2",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "oss2",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.21",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.46",
    "starlette>=0.48.0",
    "tiktoken>=0.8.0",
    "tomli-w>=1.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
